Fix min-content sizing for 'word-break: break-word'

This patch fixes min-content[1] sizing for 'word-break: break-word'.

The fix for crbug.com/655590 computes min-content sizing for
'break-word' the same as 'break-all', even though these two values have
different break opportunities as per the spec[2].

Due to this, when 'break-word' is applied to text which 'break-all' does
not allow break, such as a long sequence of '.' (FULL STOP, a.k.a.
period,) the min-content becomes too long.

[1] https://drafts.csswg.org/css-sizing/#min-content
[2] https://drafts.csswg.org/css-text-3/#word-break-property

BUG=687338

Review-Url: https://codereview.chromium.org/2681633002
Cr-Commit-Position: refs/heads/master@{#448744}

Former-commit-id: eb5a8c59e9f3121d5c0dc92b2539f86f847eb295